<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_color"
        android:icon="@drawable/ic_action_name"
        android:title="@string/change_color"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->

</menu>