<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    android:padding="10dp">

    <ListView
        android:id="@+id/node_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createNoteButton"

        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:clickable="true"
        android:onClick="openCreateNote"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_plus_symbol" />

</android.support.constraint.ConstraintLayout>